--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.556.0",
     "aws-sdk": "^2.1602.0",
+    "bcrypt": "^5.1.1",
     "chromadb": "^1.8.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
