--- a/backend/config.json
+++ b/backend/config.json
@@ -1,4 +1,9 @@
 {
     "serverPort": 8080,
-    "awsRegion": "us-east-1"
+    "awsRegion": "us-east-1",
+    "database": {
+        "host": "localhost",
+        "port": "3306",
+        "database": "moggersdb"
+      }
 }
