--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "create_tables": "node models/create_tables.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +24,10 @@
     "bcrypt": "^5.1.1",
     "chromadb": "^1.8.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mysql": "^2.18.1"
   }
 }
