--- a/backend/config.json
+++ b/backend/config.json
@@ -1,13 +1,14 @@
 {
-    "serverPort": 8080,
-    "awsRegion": "us-east-1",
-    "database": {
-        "host": "localhost",
-        "port": "3306",
-        "database": "moggersdb"
-      },
-      "groupId": "nets-2120-group-a",
-      "bootstrapServers": ["localhost:9092"],
-      "topic": "sample-topic",
-      "port": 4567
+  "serverPort": 8080,
+  "awsRegion": "us-east-1",
+  "database": {
+    "host": "localhost",
+    "port": "3306",
+    "database": "moggersdb"
+  },
+  "groupId": "nets-2120-group-a",
+  "bootstrapServers": ["localhost:9092"],
+  "topic": "sample-topic",
+  "port": 4567,
+  "s3BucketName": "moggers-image-uploads"
 }
