--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/upenn-nets-2120/project-moggers#readme",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/client-s3": "^3.569.0",
+    "@aws-sdk/s3-request-presigner": "^3.569.0",
     "aws-sdk": "^2.1602.0",
     "bcrypt": "^5.1.1",
     "chromadb": "^1.8.1",
@@ -30,6 +31,7 @@
     "fs": "^0.0.1-security",
     "kafkajs": "^2.2.4",
     "mysql": "^2.18.1",
-    "mysql2": "^3.9.7"
+    "mysql2": "^3.9.7",
+    "uuid": "^9.0.1"
   }
 }
