--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "js-tokens": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
