--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "kafkajs": "^2.2.4",
+    "kafkajs-snappy": "^1.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "uuid": "^9.0.1"
