--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "kafkajs-snappy": "^1.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
