--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "create_tables": "node models/create_tables.js"
+    "create_tables": "node models/create_tables.js",
+    "build": "node build.js",
+    "dev": "build --profile development",
+    "typings": "build --profile typings",
+    "lint": "eslint src/ demo/",
+    "test": "node --trace-warnings test/test-node.js",
+    "scan": "npx auditjs@latest ossi --dev --quiet"
   },
   "repository": {
     "type": "git",
@@ -18,14 +23,54 @@
     "url": "https://github.com/upenn-nets-2120/project-moggers/issues"
   },
   "homepage": "https://github.com/upenn-nets-2120/project-moggers#readme",
+  "keywords": [
+    "face-api",
+    "faceapi",
+    "face-detection",
+    "age-gender",
+    "emotion-detection",
+    "face-recognition",
+    "face",
+    "face-description",
+    "tensorflow",
+    "tensorflowjs",
+    "tfjs"
+  ],
   "dependencies": {
     "@aws-sdk/client-s3": "^3.569.0",
     "@aws-sdk/s3-request-presigner": "^3.569.0",
+    "@canvas/image": "^2.0.0",
+    "@microsoft/api-extractor": "^7.39.1",
+    "@tensorflow/tfjs": "^4.16.0",
+    "@tensorflow/tfjs-backend-cpu": "^4.16.0",
+    "@tensorflow/tfjs-backend-wasm": "^4.16.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.16.0",
+    "@tensorflow/tfjs-backend-webgpu": "4.19.0",
+    "@tensorflow/tfjs-converter": "^4.16.0",
+    "@tensorflow/tfjs-core": "^4.16.0",
+    "@tensorflow/tfjs-data": "^4.16.0",
+    "@tensorflow/tfjs-layers": "^4.16.0",
+    "@tensorflow/tfjs-node": "^4.19.0",
+    "@tensorflow/tfjs-node-gpu": "^4.16.0",
+    "@types/node": "^20.11.5",
+    "@types/offscreencanvas": "^2019.7.3",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@vladmandic/build": "^0.9.3",
+    "@vladmandic/face-api": "^1.7.13",
+    "@vladmandic/pilogger": "^0.4.9",
     "aws-sdk": "^2.1602.0",
     "bcrypt": "^5.1.1",
-    "chromadb": "^1.8.1",
+    "chromadb": "1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.19.11",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-json": "^3.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
@@ -33,7 +78,13 @@
     "kafkajs-snappy": "^1.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "node-fetch": "^3.3.2",
+    "rimraf": "^5.0.5",
+    "seedrandom": "^3.0.5",
     "socket.io": "^4.7.5",
+    "tslib": "^2.6.2",
+    "typedoc": "^0.25.7",
+    "typescript": "5.3.3",
     "uuid": "^9.0.1"
   }
 }
