--- a/backend/package.json
+++ b/backend/package.json
@@ -79,6 +79,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "node-fetch": "^3.3.2",
+    "openai": "^4.43.0",
     "rimraf": "^5.0.5",
     "seedrandom": "^3.0.5",
     "socket.io": "^4.7.5",
